<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="ingressar_na_lista_de_emails">Ingressar na lista de e-mails?</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="sexo">Sexo</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>

    <string-array name="ufs">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>


</resources>